Fixes tooltips being clipped

--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ main.card-container .card-panel--main {
         position: sticky;
         top: 1rem;
         align-self: flex-start;
-        overflow-y: auto;
+        overflow-y: visible;
     }
 }
 
